--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="deck" id="card-deck">
-            <div class="card">
+            <div class="card flipped">
                 1
             </div>
             <div class="card">
