--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="css/v2.css">
 </head>
 <body>
+    <h1 id="Überschrift" class="UeberschriftClass">Score: 0</h1>
     <div class="container">
         <div class="deck" id="card-deck">
         </div>
     </div>
-    <script src="js/v1.js"></script>
     <script src="js/v1.js"></script>
 </body>
 </html>
